--- a/_includes/selected_papers.liquid
+++ b/_includes/selected_papers.liquid
@@ -3,7 +3,7 @@
     For a complete list, see the
     <a href="publications/">publications</a>
     page, or my
-    <a href="https://scholar.google.com/citations?user=2d-0ybAAAAAJ&hl=en">google scholar</a>
+    <a href="https://scholar.google.com/citations?user=7IV2H5IAAAAJ&hl=en">google scholar</a>
     page.
   </p>
   <p>(*=equal contribution)</p>
